tests/health/tests__lsp__warning.toit.gold
tests/lsp/warning.toit:9:7: error: Class 'A' does not have any method 'bar'
  foo.bar
      ^~~
